FireAlarmApplication.Web/mtg_debug_20260127_143808.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 14:38:08
NetCDF: C:\Users\kubil\AppData\Local\Temp\c83b4c03-0cb3-48c7-bcf0-b7ce98b222ef.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
